# learning

./: .travis.yml  Cargo.toml  README.md  TODO.md
Algorithms/: Cargo.toml  README.md
Algorithms/src/: main.rs
Cargame/: Cargo.toml
Cargame/src/: main.rs
Chess/: Cargo.toml  README.md
Chess/src/: board.rs  main.rs
Minimax/: Cargo.toml
Minimax/src/: main.rs
Slimes/: Cargo.toml
Slimes/src/: main.rs  pheromone.rs
alcolu/alcolu/: Cargo.toml
blonk/: Cargo.toml
blonk/src/: main.rs  square.rs
risp/: Cargo.toml  test.py  text.txt
risp/src/: main.rs
rotvm/: Cargo.toml  README.md
rotvm/src/: instruction.rs  main.rs  main.s  vm.rs
src/: main.rs
testingthings/: 3  Cargo.toml  main.rs  test.rs
