[package]
name = "learning"
version = "0.1.0"
authors = ["InterestingBrainPoops <satasiyahet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[[bin]]
name = "learning"
path = "./src/main.rs"
